clang-tools-extra/test/modularize/Inputs/CompileError/module.modulemap
// module.map

module Level1A {
  header "Level1A.h"
  export *
}
module HasError {
  header "HasError.h"
  export *
}
